--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGODB_URL='mongodb+srv://subhajit:sb1234@cluster0-jeuzh.mongodb.net/test?retryWrites=true&w=majority'
 JWT_SECRET='SUBHA@#$%123'
-PAYPAL_CLIENT_ID='AcC-jWmlYciHguq34bc0_mo8uxJdOB10dsKKJnnnw3bIg8cOSEnCdTZ_lIdsEPqLmQHryE8aG-BU9XPE'
+PAYPAL_CLIENT_ID='AcC-jWmlYciHguq34bc0_mo8uxJdOB10dsKKJnnnw3bIg8cOSEnCdTZ_lIdsEPqLmQHryE8aG-BU9XPE' ||'sb'
